[gd_scene load_steps=2 format=3 uid="uid://cjnuk8qic6mb"]

[ext_resource type="Script" path="res://ui/crosshair.gd" id="1_f571y"]

[node name="Crosshair" type="CanvasLayer"]
layer = -3
script = ExtResource("1_f571y")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="h_left" type="Line2D" parent="CenterContainer/Control"]
points = PackedVector2Array(-25, 0, -5, 0)
width = 2.0

[node name="h_right" type="Line2D" parent="CenterContainer/Control"]
points = PackedVector2Array(5, 0, 25, 0)
width = 2.0

[node name="v_top" type="Line2D" parent="CenterContainer/Control"]
points = PackedVector2Array(0, -25, 0, -5)
width = 2.0

[node name="v_bottom" type="Line2D" parent="CenterContainer/Control"]
points = PackedVector2Array(0, 5, 0, 25)
width = 2.0
